--- a/config/config.toml
+++ b/config/config.toml
@@ -5,4 +5,6 @@ csrf_key = "asfasfkalsaas"
 
 token_max_age = 3600
 
-db_connection_string       = "host=db port=5432 user=postgres password=music dbname=wave sslmode=disable TimeZone=Europe/Moscow"
+db_connection_string = "host=db port=5432 user=postgres password=music dbname=wave sslmode=disable TimeZone=Europe/Moscow"
+
+session_id = "session_id"
