added front run

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -27,27 +27,28 @@ http {
 
 
 server {
-  root /usr/share/nginx/html;
+  root /var/www/wave;
   listen 80 default_server;
 
-  index index.html index.htm;
   #server_name wave.com www.wave.com;
 
 
   location / {
     include  /etc/nginx/mime.types;
     gzip            on;
+
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
+    try_files $uri $uri/ /index.html;
   }
 
-  location /api/ {
-     proxy_pass http://wave_music:5000;
-  }
+  #location /api/ {
+  #   proxy_pass http://wave_music:5000;
+  #}
 
-        location ^~ /docs {
-            proxy_pass http://wave_music:5000;
-        }
+  #      location ^~ /docs {
+  #          proxy_pass http://wave_music:5000;
+  #      }
 }
 
 }
