--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
     volumes:
       - ../../../../front/2022_1_Wave/src:/var/www/wave
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
-  #  depends_on:
-  #    - wave.music
+    depends_on:
+      - wave.music
   #    - db
 
   wave.music:
@@ -17,19 +17,18 @@ services:
     expose:
       - 5000
     working_dir: /var/www/wave.music
-    command:
-      - bash -c "cd src && go get && go build -o wave main.go && ./wave"
+    command: bash -c "go build -o wave cmd/api/main.go && ./wave"
     volumes:
       - ../../src:/var/www/wave.music
 
-  db:
-    image: postgres
-    container_name: "wave-db"
-    expose:
-      - 5432
-    volumes:
-      - ../../db_dump:/tmp
-    environment:
-      - POSTGRES_PASSWORD=music
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=wave
+#  db:
+#    image: postgres
+#    container_name: "wave-db"
+#    expose:
+#      - 5432
+#    volumes:
+#      - ../../db_dump:/tmp
+#    environment:
+#      - POSTGRES_PASSWORD=music
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_DB=wave
