WV-51: update nginx.conf

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -42,13 +42,13 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
-  #location /api/ {
-  #   proxy_pass http://wave_music:5000;
-  #}
+  location /api {
+     proxy_pass http://wave_music:5000;
+  }
 
-  #      location ^~ /docs {
-  #          proxy_pass http://wave_music:5000;
-  #      }
+  location ^~ /docs {
+      proxy_pass http://wave_music:5000/docs/index.html;
+  }
 }
 
 }
