WV51: fixed routing

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -46,8 +46,9 @@ server {
      proxy_pass http://wave_music:5000;
   }
 
-  location ^~ /docs {
-      proxy_pass http://wave_music:5000/docs/index.html;
+  location ^~ /docs/ {
+      index index.html;
+      proxy_pass http://wave_music:5000/docs/;
   }
 }
 
