--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -9,10 +9,10 @@ services:
       - ../../../../front/2022_1_Wave/src:/var/www/wave
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - wave.music
+      - wave_music
   #    - db
 
-  wave.music:
+  wave_music:
     image: golang
     expose:
       - 5000
