--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -4,30 +4,32 @@ services:
     image: nginx
     ports:
       - "80:80"
-    working_dir: /var/www/service/server
+    working_dir: /var/www/wave
     volumes:
-      - ../../../2022_1_Wave/public/build:/var/www/wave
+      - ../../../../front/2022_1_Wave/src:/var/www/wave
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - wave.music
-      - db
+      - wave_music
+  #    - db
 
-  wave.music:
-    image: cosmtrek/air
+  wave_music:
+    image: golang
     expose:
       - 5000
     working_dir: /var/www/wave.music
+    command: bash -c "go build -o wave cmd/api/main.go && ./wave"
     volumes:
       - ../../src:/var/www/wave.music
+      - ../../config/config.toml:/var/www/wave.music/config.toml
 
-  db:
-    image: postgres
-    container_name: "wave-db"
-    expose:
-      - 5432
-    volumes:
-      - ../../db_dump:/tmp
-    environment:
-      - POSTGRES_PASSWORD=music
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=wave
+#  db:
+#    image: postgres
+#    container_name: "wave-db"
+#    expose:
+#      - 5432
+#    volumes:
+#      - ../../db_dump:/tmp
+#    environment:
+#      - POSTGRES_PASSWORD=music
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_DB=wave
