WV-53: добавлены тесты для артиста, песни, альбома, song --> track, перегенерирована дока

--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     expose:
       - 5000
     working_dir: /var/www/wave.music
-    command: bash -c "go build -o wave cmd/api/main.go && ./wave"
+    command: bash -c "go build -o wave cmd/routes/main.go && ./wave"
     volumes:
       - ../../src:/var/www/wave.music
       - ../../config/config.toml:/var/www/wave.music/config.toml
