WV-53: поправка докера для прода

--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       - "80:80"
     working_dir: /var/www/wave
     volumes:
-      - ../../../front/2022_1_Wave/src:/var/www/wave
+      - ../../../../front/2022_1_Wave/src:/var/www/wave
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - wave_music
@@ -17,7 +17,7 @@ services:
     expose:
       - 5000
     working_dir: /var/www/wave.music
-    command: bash -c "go build -o wave cmd/routes/main.go && ./wave"
+    command: bash -c "go build -o wave cmd/api/main.go && ./wave"
     volumes:
       - ../../src:/var/www/wave.music
       - ../../config/config.toml:/var/www/wave.music/config.toml
