--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-.idea/
+#.idea/
 src/.air.toml
 src/tmp
 /src/config.toml
@@ -22,4 +22,6 @@ src/wave
 
 *.png
 *.jp*
+
+*cover.out*
 
