--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     working_dir: /var/www/service/server
     volumes:
       - ../../../2022_1_Wave/public/build:/var/www/wave
+      - ../../logs/nginx_logs:/var/log/nginx  
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
     - wave_music
