--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ../../../../front/2022_1_Wave/src:/var/www/wave
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ../../logs/nginx_logs:/var/log/nginx
     depends_on:
       - wave_music
   #    - db
