WV-58: тестовый запуск

--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -15,3 +15,4 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: ssh root@77.223.123.188 Jhg8H8fLjsD6 || mkdir "fromCi"	
