--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -18,10 +18,10 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-	  key: ${{ secrets.SSH_PRIVATE_KEY }}
-	  known_hosts: "some-unexcept-string"
-      - name: Adding Known Hosts
-	run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: "some-unexcept-string"
+      - name: Adding known hosts"
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
       - name: Deploy with rsync
-	run: ssh root@wave-music.online || mkdir "helloFromCI"
-        run: ssh root@77.223.123.188 Jhg8H8fLjsD6 || mkdir "fromCi"	
+        run: ssh root@wave-music.online || mkdir "helloFromCI"
+        
