--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -25,13 +25,15 @@ services:
   db:
     image: postgres
     container_name: "wave-db"
-    expose:
-      - 5432
+    ports:
+      - '5432:5432'
+    #    expose:
+    #      - 5432
     volumes:
       - ../../db_dump:/tmp
     environment:
-      - POSTGRES_PASSWORD=music
       - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=music
       - POSTGRES_DB=wave
 
 
