WV-59: подправлена генерация доки

--- a/env/dev/.air.toml
+++ b/env/dev/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./tmp/wave.music ./cmd/api/main.go"
+cmd = "swag init -g cmd/api/main.go && go build -o ./tmp/wave.music ./cmd/api/main.go"
 # Binary file yields from `cmd`.
 bin = "tmp/wave.music"
 # Customize binary, can setup environment variables when run your app.
@@ -18,7 +18,7 @@ include_ext = ["go", "yaml","json","js",".sql",".toml"]
 exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules", "database"]
 # Watch these directories if you specified.
 # Exclude files.
-exclude_file = []
+exclude_file = ["docs/docs.go"]
 # Exclude unchanged files.
 exclude_unchanged = true
 # Follow symlink for directories
