WV-59: добавлен запуск pgadmin через прокси

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -4,7 +4,6 @@ events {
 }
 
 http {
-
 # upstream main {
 #    server main:5000;
 #  }
@@ -50,6 +49,17 @@ server {
       index index.html;
       proxy_pass http://wave_music:5000/docs/;
   }
+
+  location  /pgadmin {
+     proxy_pass http://pgadmin/;
+     proxy_http_version 1.1;
+     proxy_set_header X-Script-Name /pgadmin;
+     proxy_set_header Upgrade $http_upgrade;
+     proxy_set_header Connection 'upgrade';
+     proxy_set_header Host $host;
+     proxy_cache_bypass $http_upgrade;
+ }
+
 }
 
 }
