--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
       - "80:80"
     working_dir: /var/www/service/server
     volumes:
-      - ../../../2022_1_Wave/public/build:/var/www/wave
-      - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
+#      - ../../../2022_1_Wave/public/build:/var/www/wave
+      - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - wave_music
       - db
@@ -15,6 +15,7 @@ services:
 
   wave_music:
     build: ./
+    tty: true
     expose:
       - 5000
     working_dir: /var/www/service/
@@ -24,7 +25,8 @@ services:
       - ./.air.toml:/var/www/service/.air.toml:ro
       - ../../config/config.toml:/var/www/service/config.toml:ro
     environment:
-      - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432
+      - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
+      - DATABASE_MIGRATIONS=./db/migrations
     depends_on:
       - db
 
@@ -36,11 +38,24 @@ services:
       - POSTGRES_DB=wave
     expose:
       - 5432
-    working_dir: /var/www/service
     volumes:
-      - .:/docker-entrypoint-initdb.d
-      - ../../src:/var/www/service
       - ../../src/db/:/var/run/postgresql/
+
+  test_db:
+    image: postgres:14
+    environment:
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=test
+    #    expose:
+    #      - 5432
+    ports:
+      - "5500:5432"
+  #    working_dir: /var/www/service
+  #    volumes:
+  #      - .:/docker-entrypoint-initdb.d
+  #      - ../../src:/var/www/service
+  #      - ../../src/db/:/var/run/postgresql/
 
   pgadmin:
     hostname: pgadmin
