--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -29,6 +29,12 @@ services:
       - DATABASE_MIGRATIONS=./db/migrations
     depends_on:
       - db
+      - redis
+
+  redis:
+    image: redis
+    ports:
+      - '6379:6379'
 
   db:
     image: postgres:14
@@ -63,3 +69,5 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: root
+
+
