--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -4,13 +4,13 @@ services:
     image: nginx
     ports:
       - "80:80"
-    working_dir: /var/www/service/server
+    working_dir: /var/www/wave/
     volumes:
 #      - ../../../2022_1_Wave/public/build:/var/www/wave
+      - ../../../2022_1_Wave/src/assets/:/var/www/wave/assets
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - wave_music
-      - db
       - pgadmin
 
   wave_music:
@@ -53,15 +53,8 @@ services:
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
       - POSTGRES_DB=test
-    #    expose:
-    #      - 5432
     ports:
       - "5500:5432"
-  #    working_dir: /var/www/service
-  #    volumes:
-  #      - .:/docker-entrypoint-initdb.d
-  #      - ../../src:/var/www/service
-  #      - ../../src/db/:/var/run/postgresql/
 
   pgadmin:
     hostname: pgadmin
