--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
       - "80:80"
     working_dir: /var/www/wave/
     volumes:
-      - ../../../2022_1_Wave/src:/var/www/wave/
+      - ../../../2022_1_Wave:/var/www/wave/
 #      - ../../../2022_1_Wave/public/build:/var/www/wave
-      - ../../../2022_1_Wave/src/assets/:/var/www/wave/assets
+      - ../../../2022_1_Wave/assets/:/var/www/wave/assets
       - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - wave_music
@@ -22,7 +22,7 @@ services:
     working_dir: /var/www/service/
     entrypoint: ./entrypoint.sh
     volumes:
-      - ../../src:/var/www/service
+      - ../..:/var/www/service
       - ./.air.toml:/var/www/service/.air.toml:ro
       - ../../config/config.toml:/var/www/service/config.toml:ro
     environment:
@@ -46,7 +46,7 @@ services:
     expose:
       - 5432
     volumes:
-      - ../../src/db/:/var/run/postgresql/
+      - ../../db/:/var/run/postgresql/
 
   test_db:
     image: postgres:14
