--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -4,32 +4,49 @@ services:
     image: nginx
     ports:
       - "80:80"
-    working_dir: /var/www/wave
+    working_dir: /var/www/wave/
     volumes:
-      - ../../../../front/2022_1_Wave/src:/var/www/wave
-      - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ../../assets:/var/www/wave/assets
+      - ../../config/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../../../../front/2022_1_Wave/build:/var/www/wave
     depends_on:
       - wave_music
-  #    - db
 
   wave_music:
-    image: golang
+    image: golang:latest
+    tty: true
     expose:
       - 5000
-    working_dir: /var/www/wave.music
-    command: bash -c "go build -o wave cmd/api/main.go && ./wave"
+    working_dir: /var/www/service
+    command: bash -c "mkdir -p tmp && go build -o ./tmp/wave.music cmd/api/main.go && ./tmp/wave.music"
     volumes:
-      - ../../src:/var/www/wave.music
-      - ../../config/config.toml:/var/www/wave.music/config.toml
+      - ../..:/var/www/service
+      - ../../config/config.toml:/var/www/service/config.toml:ro
+    environment:
+      - DATABASE_CONNECTION=user=postgres password=music dbname=wave host=db port=5432 sslmode=disable
+      - DATABASE_MIGRATIONS=./db/migrations
+    depends_on:
+      - db
+      - redis
 
-#  db:
-#    image: postgres
-#    container_name: "wave-db"
-#    expose:
-#      - 5432
-#    volumes:
-#      - ../../db_dump:/tmp
-#    environment:
-#      - POSTGRES_PASSWORD=music
-#      - POSTGRES_USER=postgres
-#      - POSTGRES_DB=wave
+  redis:
+    image: redis
+    ports:
+      - '6379:6379'
+
+  db:
+    image: postgres:14
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=music
+      - POSTGRES_DB=wave
+    expose:
+      - 5432
+    volumes:
+      - ../../db/:/var/run/postgresql/
+  pgadmin:
+    hostname: pgadmin
+    image: dpage/pgadmin4:6
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
