WV-68: переход на go:latest

--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -15,8 +15,8 @@ services:
       - pgadmin
 
   wave_music:
-    build: ./
     tty: true
+    image: golang:latest
     expose:
       - 5000
     working_dir: /var/www/service/
