--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -43,6 +43,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=music
       - POSTGRES_DB=wave
+    ports:
+      - "5432:5432"
     expose:
       - 5432
     volumes:
