WV-71: правка скрипта для запуска прода

--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     expose:
       - 5000
     working_dir: /var/www/service
-    entrypoint: ./dev.sh
+    entrypoint: ./prod.sh
     volumes:
       - ../..:/var/www/service
       - ../../config/config.toml:/var/www/service/config.toml:ro
