WV-73: заделки метрик и оповещений

--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -1,4 +1,13 @@
 version: "3.5"
+networks:
+  monitor-net:
+    driver: bridge
+
+volumes:
+  prometheus_data: {}
+  grafana_data: {}
+
+
 services:
   web:
     image: nginx
@@ -31,6 +40,7 @@ services:
     depends_on:
       - db
       - redis
+      - prometheus
 
   redis:
     image: redis
@@ -49,6 +59,160 @@ services:
       - 5432
     volumes:
       - ../../db/:/var/run/postgresql/
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ../../metrics/prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    expose:
+      - 9090
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    volumes:
+      - ../../metrics/alertmanager:/etc/alertmanager
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+      - '--storage.path=/alertmanager'
+    restart: unless-stopped
+    expose:
+      - 9093
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  prometheus-bot:
+    container_name: telegrambot
+    image: tienbm90/prometheus-bot:0.0.1
+    volumes:
+      - ../../metrics/alertmanager/templates:/etc/telegrambot/
+      - ../../metrics/alertmanager/telegram/config.yaml:/config.yaml
+#    expose:
+#      - 9087
+    ports:
+      - "9087:9087"
+    restart: unless-stopped
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+#  alertmanager-bot:
+#    image: metalmatze/alertmanager-bot
+#    command:
+#      - "--listen.addr=0.0.0.0:8080"
+#    environment:
+#      ALERTMANAGER_URL: http://alertmanager:9093
+#      BOLT_PATH: /data/bot.db
+#      STORE: bolt
+#      TEMPLATE_PATHS: /templates/default.tmpl
+#      TELEGRAM_ADMIN: 741126351
+#      TELEGRAM_TOKEN: 5341229543:AAFkV8kzd_i4jMHU781LrJ0qCF-iHPFCTqY
+#      ADMIN_USER: ${ADMIN_USER}
+#      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+#    volumes:
+#      - "../../metrics/alertmanager/templates:/templates"
+#
+  nodeexporter:
+    image: prom/node-exporter
+    container_name: nodeexporter
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+    restart: unless-stopped
+    expose:
+      - 9100
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor
+    container_name: cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
+    restart: unless-stopped
+    expose:
+      - 8080
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ../../metrics/grafana/provisioning:/etc/grafana/provisioning
+    environment:
+      - GF_SECURITY_ADMIN_USER=${ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    restart: unless-stopped
+    expose:
+      - 3000
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  pushgateway:
+    image: prom/pushgateway
+    container_name: pushgateway
+    restart: unless-stopped
+    expose:
+      - 9091
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  caddy:
+    image: caddy
+    container_name: caddy
+    ports:
+      - "3000:3000"
+      - "9090:9090"
+      - "9093:9093"
+      - "9091:9091"
+    volumes:
+      - ../../metrics/caddy:/etc/caddy
+    environment:
+      - ADMIN_USER=${ADMIN_USER}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+    restart: unless-stopped
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
 
   test_db:
     image: postgres:14
