Fixed open port

--- a/env/prod/docker-compose.yaml
+++ b/env/prod/docker-compose.yaml
@@ -33,8 +33,8 @@ services:
 
   redis:
     image: redis
-    ports:
-      - '6379:6379'
+    expose:
+      - 6379
 
   db:
     image: postgres:14
