--- a/env/dev/docker-compose.yaml
+++ b/env/dev/docker-compose.yaml
@@ -34,8 +34,8 @@ services:
 
   redis:
     image: redis
-    ports:
-      - '6379:6379'
+    expose:
+      - 6379
 
   db:
     image: postgres:14
