--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -50,15 +50,15 @@ server {
       proxy_pass http://wave_music:5000/docs/;
   }
 
-  location  /pgadmin {
-     proxy_pass http://pgadmin/;
-     proxy_http_version 1.1;
-     proxy_set_header X-Script-Name /pgadmin;
-     proxy_set_header Upgrade $http_upgrade;
-     proxy_set_header Connection 'upgrade';
-     proxy_set_header Host $host;
-     proxy_cache_bypass $http_upgrade;
- }
+#   location  /pgadmin {
+#      proxy_pass http://pgadmin/;
+#      proxy_http_version 1.1;
+#      proxy_set_header X-Script-Name /pgadmin;
+#      proxy_set_header Upgrade $http_upgrade;
+#      proxy_set_header Connection 'upgrade';
+#      proxy_set_header Host $host;
+#      proxy_cache_bypass $http_upgrade;
+#  }
 
 }
 
